# skibidifortnajt-backend

./: .gitignore  .sqllsrc.json  Cargo.toml  Dockerfile  README.md  SECRET  add-image-to-post.sh  ban-curl.sh  ban.sh  change-displayname.sh  create-post.sh  delete-user-curl.sh  deploy.sh  docker-compose.yml  fill-db-curl.sh  fill-db.sql  get-images-from-post.sh  login-curl.sh  react-curl.sh  setup-db.sh  setup.sql  signup-curl.sh  test-bans.sh  test-images.sh  test-posts.sql  test.sh  unban.sh  upgrade-curl.sh  upload-image.sh
.github/workflows/: test.yml
scripts/: add-image-to-post.sh  ban.sh  build-aws.sh  change-description.sh  change-displayname.sh  comment.sh  create-post.sh  delete-post.sh  delete-user.sh  deploy-aws.sh  deploy.sh  login.sh  push_all.sh  react.sh  remove-pfp.sh  set-pfp.sh  signup.sh  test-bans.sh  test-comments.sh  test-cors.sh  test-images.sh  test-pfp.sh  test-posts.sh  unban.sh  upgrade.sh  upload-image.sh
src/: api_calls.rs  auth.rs  check_banned.rs  database_functions.rs  getToken.rs  get_secret.rs  get_token.rs  handlers.rs  image_processing.rs  main.rs  purge_data.rs  routes.rs  types.rs  verify_token.rs
