[package]
name = "projekt-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tokio-rusqlite = "0.5"
jsonwebtoken = "=7.2"
argon2 = "0.5.3"
time = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "0.8", features = ["v4"] }
futures = { version = "0.3", default-features = false }
bytes = "1.0"
urlencoding = "2.1.3"
